# grade-curricular/server/api/controllers/Grade/router.ts
@@ -5,6 +5,7 @@ export default express
     .Router()
     .get('/', controller.all)
     .get('/:id', controller.getById)
-    .post('/:id', controller.post)
+    .post('/', controller.post)
     .put('/:id', controller.update)
     .delete('/:id', controller.delete)
+    .post('/event', controller.updateEvent);
